<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.wohlsoft.opnmidiplayer.Player">
    <RelativeLayout
        android:id="@+id/activity_playerZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/sample_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <Button
        tools:text="@string/open"
        android:text="@string/open"
        android:id="@+id/openFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sample_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        tools:text="@string/playpause"
        android:text="@string/playpause"
        android:id="@+id/playPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sample_text"
        android:layout_toRightOf="@+id/openFile"
        android:layout_toEndOf="@+id/openFile"/>

    <Button
        tools:text="@string/restart"
        android:text="@string/restart"
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sample_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/playPause"
        android:layout_toEndOf="@+id/playPause" />

        <CheckBox
            android:id="@+id/scalableModulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/openFile"
            android:text="@string/scalemod"
            tools:text="@string/scalemod"
        />

        <CheckBox
            android:id="@+id/fullRangeBrightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/scalableModulation"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/scalableModulation"
            android:layout_below="@+id/scalableModulation"
            android:text="@string/fullrangebrightness"
            tools:text="@string/fullrangebrightness" />

        <TextView
            android:text="@string/volumesModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/volumeRangesModelLabel"
            android:layout_below="@+id/logVols"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:text="@string/volumesModel" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/volumeRangesModel"
            android:layout_below="@+id/volumeRangesModelLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/numChips"
            android:layout_below="@+id/numChipsLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:descendantFocusability="blocksDescendants"
            android:orientation="horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quitapp"
            tools:text="@string/quit"
            android:text="@string/quit"
            android:layout_below="@+id/numChips"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


        <SeekBar
            android:id="@+id/musPos"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35px"
            android:layout_marginBottom="35px"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/volumeRangesModel"
            android:max="100"
            android:progress="0" />

        <TextView
        android:text="@string/numChips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:id="@+id/numChipsLabel"
        tools:text="@string/numChips"
            android:layout_below="@+id/musPos"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="19dp" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numChipsCount"
            android:layout_toRightOf="@+id/numChips"
            android:layout_toEndOf="@+id/numChips"
            android:layout_alignBottom="@+id/numChips"
            android:layout_alignTop="@+id/numChips"
            android:textAllCaps="false"
            android:textStyle="normal|italic" />

        <CheckBox
            android:id="@+id/logVols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/fullRangeBrightness"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/fullRangeBrightness"
            android:layout_below="@+id/fullRangeBrightness"
            android:text="@string/logvolumes" />

    </RelativeLayout>
</ScrollView>

